server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ictlab-server
spec:
    type: NodePort
    selector:
        app: ictlab-server
    ports:
        - port: 3000
          targetPort: 3000
          protocol: TCP
        - port: 8443
          targetPort: 8443
          protocol: TCP
