server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    configuration.konghq.com: strip-path
  name: ictlab-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: ictlab-server
          servicePort: 3000
